[gd_scene load_steps=47 format=2]

[ext_resource path="res://Enemies/Slash_Effect_Frames.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Enemies/Monster_UI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/Sprite.gd" type="Script" id=3]
[ext_resource path="res://Shaders/Idle.tres" type="Material" id=4]
[ext_resource path="res://Enemies/Boko/Boko_axe.png" type="Texture" id=5]
[ext_resource path="res://Enemies/Norman/Norman_Hand_Spriteframes.tres" type="SpriteFrames" id=6]
[ext_resource path="res://Enemies/Norman/Hand_Attack.gd" type="Script" id=7]
[ext_resource path="res://Enemies/Die.gd" type="Script" id=8]
[ext_resource path="res://Enemies/Eyes.gd" type="Script" id=9]
[ext_resource path="res://Enemies/Boko/Idle.gd" type="Script" id=10]
[ext_resource path="res://Enemies/Hit.gd" type="Script" id=11]
[ext_resource path="res://Enemies/Death_Launch_Left.tres" type="Animation" id=12]
[ext_resource path="res://Enemies/Death_Right.tres" type="Animation" id=13]
[ext_resource path="res://Enemies/Death_Left.tres" type="Animation" id=14]
[ext_resource path="res://Enemies/State_Machine.gd" type="Script" id=15]
[ext_resource path="res://Enemies/Boko/Move.gd" type="Script" id=16]
[ext_resource path="res://Enemies/Move.tres" type="Animation" id=17]
[ext_resource path="res://Enemies/Norman/Norman_Hand_Hit.tres" type="Animation" id=18]
[ext_resource path="res://Helpers/Sprite_Handler.tscn" type="PackedScene" id=19]
[ext_resource path="res://Enemies/Boko/Slash_Hitbox.gd" type="Script" id=20]
[ext_resource path="res://Enemies/Norman/Norman_hand_eyes.png" type="Texture" id=21]
[ext_resource path="res://Enemies/Monster_Effects.tscn" type="PackedScene" id=22]
[ext_resource path="res://Enemies/Death_Launch_Right.tres" type="Animation" id=23]
[ext_resource path="res://Enemies/Components/Component_Cartable.tscn" type="PackedScene" id=24]
[ext_resource path="res://Enemies/Slash_Right.tres" type="Animation" id=25]
[ext_resource path="res://Enemies/Slash_Left.tres" type="Animation" id=26]
[ext_resource path="res://Enemies/Boko/Hitbox.gd" type="Script" id=27]
[ext_resource path="res://Enemies/Components/Component_Dance.tscn" type="PackedScene" id=28]
[ext_resource path="res://Helpers/Target_Point.tscn" type="PackedScene" id=29]
[ext_resource path="res://Enemies/Hat.tscn" type="PackedScene" id=30]
[ext_resource path="res://Enemies/Components/Component_Can_Drown.tscn" type="PackedScene" id=31]
[ext_resource path="res://Enemies/Components/Component_Push_Objects.tscn" type="PackedScene" id=32]
[ext_resource path="res://Enemies/Components/Component_Manager.tscn" type="PackedScene" id=33]
[ext_resource path="res://Enemies/Components/Component_Grounded.tscn" type="PackedScene" id=34]
[ext_resource path="res://Enemies/Norman/Float_Move_Anim.tres" type="Animation" id=35]
[ext_resource path="res://Enemies/Move_Particles.tscn" type="PackedScene" id=36]
[ext_resource path="res://Enemies/Norman/Link/Link_Animated.tres" type="Texture" id=37]
[ext_resource path="res://Enemies/Norman/Link.gd" type="Script" id=38]
[ext_resource path="res://Enemies/States/Cutscene_Animation.tscn" type="PackedScene" id=39]
[ext_resource path="res://Enemies/Norman/Norman_Hand_Wakeup_Anim.tres" type="Animation" id=40]

[sub_resource type="CapsuleShape2D" id=14]
radius = 4.0
height = 5.0

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 2, 4 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 5, 15 )

[sub_resource type="Animation" id=10]
length = 0.5

[sub_resource type="Animation" id=12]
resource_name = "Jump"
length = 0.35
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -4 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[node name="Norman_Hand" type="KinematicBody2D" groups=["Monster"]]
scale = Vector2( 5, 5 )
collision_layer = 2
collision_mask = 7
script = ExtResource( 15 )
START_STATE = NodePath("States/Cutscene_Animation")
monster_type = "norman_hand"

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -2.38419e-07, 1.19209e-07 )
z_index = 1
shape = SubResource( 14 )

[node name="Hitbox" type="Area2D" parent="."]
visible = false
z_index = 1
collision_layer = 2
collision_mask = 5
script = ExtResource( 27 )

[node name="Collision" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 15 )
__meta__ = {
"_editor_description_": ""
}

[node name="Target_Point" parent="." instance=ExtResource( 29 )]
position = Vector2( 2.38419e-07, 0 )

[node name="Components" parent="." instance=ExtResource( 33 )]

[node name="Push_Objects" parent="Components" instance=ExtResource( 32 )]

[node name="Grounded" parent="Components" instance=ExtResource( 34 )]

[node name="Can_Drown" parent="Components" instance=ExtResource( 31 )]

[node name="Cartable" parent="Components" instance=ExtResource( 24 )]

[node name="Dance" parent="Components" instance=ExtResource( 28 )]
is_active = false

[node name="Sprite_Handler" parent="." instance=ExtResource( 19 )]

[node name="Sprite" type="AnimatedSprite" parent="."]
material = ExtResource( 4 )
frames = ExtResource( 6 )
animation = "Wake Up"
script = ExtResource( 3 )

[node name="Eyes" type="Sprite" parent="Sprite"]
material = ExtResource( 4 )
texture = ExtResource( 21 )
offset = Vector2( 4, 0 )
script = ExtResource( 9 )
__meta__ = {
"_editor_description_": ""
}

[node name="Slash_Effect" type="AnimatedSprite" parent="Sprite" groups=["No_Flash"]]
visible = false
z_index = 50
z_as_relative = false
frames = ExtResource( 1 )
frame = 9

[node name="Slash_Animation" type="AnimationPlayer" parent="Sprite/Slash_Effect"]
anims/Slash_Left = ExtResource( 26 )
anims/Slash_Right = ExtResource( 25 )

[node name="Slash_Hitbox" type="Area2D" parent="Sprite/Slash_Effect" groups=["Monster_Hitbox"]]
position = Vector2( 2, 0 )
collision_layer = 2
collision_mask = 5
script = ExtResource( 20 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Slash_Effect/Slash_Hitbox"]
scale = Vector2( 0.392614, 0.525361 )
shape = SubResource( 16 )
disabled = true

[node name="Animation" type="AnimationPlayer" parent="Sprite"]
anims/Death_Launch_Left = ExtResource( 12 )
anims/Death_Launch_Right = ExtResource( 23 )
anims/Death_Left = ExtResource( 14 )
anims/Death_Right = ExtResource( 13 )
anims/Float_Move_Anim = ExtResource( 35 )
"anims/Hand Wake Up" = ExtResource( 40 )
anims/Hit = ExtResource( 18 )
anims/Idle = SubResource( 10 )
anims/Jump = SubResource( 12 )
anims/Move = ExtResource( 17 )
anims/RESET = SubResource( 13 )

[node name="Hat" parent="Sprite" instance=ExtResource( 30 )]

[node name="States" type="Node" parent="."]

[node name="Cutscene_Animation" parent="States" instance=ExtResource( 39 )]

[node name="Idle" type="Node" parent="States"]
script = ExtResource( 10 )
on_enter = {
"animate_shadow": true,
"animation": "",
"reset_frame": true
}

[node name="Move" type="Node" parent="States"]
script = ExtResource( 16 )
MAX_MOVESPEED = 110.0
MOVE_ANIMATION = null
FLIP_ON_INPUT = false

[node name="Attack" type="Node" parent="States"]
script = ExtResource( 7 )

[node name="Cooldown_Timer" type="Timer" parent="States/Attack"]
wait_time = 0.1
one_shot = true

[node name="Hit" type="Node" parent="States"]
script = ExtResource( 11 )
HIT_ANIMATION = ExtResource( 18 )

[node name="Cooldown" type="Timer" parent="States/Hit"]
wait_time = 0.5
one_shot = true

[node name="Die" type="Node" parent="States"]
script = ExtResource( 8 )
DEATH_SPRITE_FRAME = 2
DROP_WEAPON_TEXTURE = ExtResource( 5 )

[node name="UI" parent="." instance=ExtResource( 2 )]
stamina_bar = {
"active": true,
"recharge_time": 2.5,
"visible": false,
"y_offset": 6
}
hearts = {
"hearts_per_row": 3,
"visible": false,
"y_offset": -7
}

[node name="Effects" parent="." instance=ExtResource( 22 )]
move_particle = {
"active": false,
"name": "Move_Particles",
"particle_scene": ExtResource( 36 )
}
shadow = {
"active": true,
"offset": Vector2( 0, 20 ),
"scale": Vector2( 1, 1 )
}

[node name="Link" type="Line2D" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.639216 )
show_behind_parent = true
position = Vector2( 0, 10 )
z_index = -5
points = PoolVector2Array( 0, -18, 0, -26 )
width = 5.0
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 37 )
texture_mode = 1
joint_mode = 1
script = ExtResource( 38 )

[connection signal="die" from="." to="Link" method="_on_Norman_Hand_die"]
[connection signal="animation_finished" from="Sprite/Slash_Effect/Slash_Animation" to="States/Attack" method="_on_Slash_Animation_animation_finished"]
[connection signal="animation_finished" from="Sprite/Animation" to="." method="_on_animation_finished"]
[connection signal="timeout" from="States/Attack/Cooldown_Timer" to="States/Attack" method="_on_Cooldown_Timer_timeout"]
[connection signal="timeout" from="States/Hit/Cooldown" to="States/Hit" method="_on_Cooldown_timeout"]
